--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ECOWAVE HVAC</title>
     <link rel="icon" href="{% static 'images/logos/favicon.svg' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'plugins/bootstrap/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'plugins/owl-carousel/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/fontello.css' %}">
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}?v=4">
@@ -260,12 +260,12 @@
 
 <a class="btn_button" href="tel: 267 338-5140"><i class="icon-phone-call"></i></a>
 
-<script src="{% static 'js/jquery.min.js' %}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script>
-<script src="{% static 'js/owl.carousel.min.js' %}"></script>
-
-<script src="{% static 'js/waypoint.js' %}"></script>
-<script src="{% static 'js/jquery.counterup.min.js' %}"></script>
+<script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
+<script src="{% static 'plugins/bootstrap/bootstrap.min.js' %}"></script>
+<script src="{% static 'plugins/owl-carousel/owl.carousel.min.js' %}"></script>
+<script src="{% static 'plugins/waypoint/waypoint.js' %}"></script>
+<script src="{% static 'plugins/jquery/jquery.counterup.min.js' %}"></script>
 <script src="{% static 'js/custom.js' %}"></script>
+
 </body>
 </html>
