--- a/templates/service.html
+++ b/templates/service.html
@@ -109,7 +109,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service_box">
                     <div class="service_img">
-                        <img src="{% static 'images/service/service-1.jpg' %}" alt="service image">
+                        <img src="{% static 'images/service/service-1.webp' %}" alt="service image">
                         <div class="icon-box">
                             <i class="icon-snow"></i>
                         </div>
@@ -126,7 +126,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service_box">
                     <div class="service_img">
-                        <img src="{% static 'images/service/service-2.jpg' %}" alt="service image">
+                        <img src="{% static 'images/service/service-2.webp' %}" alt="service image">
                         <div class="icon-box">
                             <i class="icon-fire"></i>
                         </div>
@@ -143,7 +143,7 @@
             <div class="col-md-4 col-sm-6">
                 <div class="service_box">
                     <div class="service_img">
-                        <img src="{% static 'images/service/service-3.jpg' %}" alt="service image">
+                        <img src="{% static 'images/service/service-3.webp' %}" alt="service image">
                         <div class="icon-box">
                             <i class="icon-ac"></i>
                         </div>
