- add meta tags and banner.png

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,9 +2,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta name="description" content="ECOWAVE HVAC - Решим любую вашу проблему">
     <title>ECOWAVE HVAC - About</title>
+
+    <meta name="twitter:image:src" content="https://www.ecowavehvac.com/images/banner.png">
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:site" content="ECOWAVE HVAC">
+    <meta name="twitter:title" content="Исправим и настроим!">
+    <meta name="twitter:description" content="ECOWAVE HVAC - Решим любую вашу проблему">
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.ecowavehvac.com/"/>
+    <meta property="og:site_name" content="ECOWAVE HVAC"/>
+    <meta property="og:title" content="Исправим и настроим!"/>
+    <meta property="og:description" content="ECOWAVE HVAC - Решим любую вашу проблему"/>
+    <meta property="og:image" content="https://www.ecowavehvac.com/images/banner.png"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="600"/>
+
     <link rel="icon" href="{% static 'images/logos/favicon.svg' %}">
     <link rel="stylesheet" href="{% static 'plugins/bootstrap/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
